<resources>
    <string name="app_name">计算器</string>
    <string name="title">计算器</string>
    <string name="content"></string>
    <string name="btn_clear">C</string>
    <string name="btn_brackets">()</string>
    <string name="btn_out">&lt;</string>
    <string name="btn_add">+</string>
    <string name="btn_jian">-</string>
    <string name="btn_chen">*</string>
    <string name="btn_cu">/</string>
    <string name="btn_dian">.</string>
    <string name="btn_den">=</string>
    <string name="btn_0">0</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
</resources>
