<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/fruit_content"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:text="@string/content"
        android:textSize="36sp"
        android:gravity="bottom|end"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_clear"
                style="?android:attr/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="82dp"
                android:layout_weight="1"
                android:text="@string/btn_clear"
                android:textSize="30sp"
                android:textStyle="bold" />
            <!--默认样式-->

            <Button
                android:id="@+id/btn_brackets"
                style="?android:attr/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="82dp"
                android:layout_weight="1"
                android:text="@string/btn_brackets"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_out"
                style="?android:attr/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="82dp"
                android:layout_weight="1"
                android:text="@string/btn_out"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_add"
                style="?android:attr/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="82dp"
                android:layout_weight="1"
                android:text="@string/btn_add"
                android:textSize="30sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_7"
                style="?android:attr/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="82dp"
                android:layout_weight="1"
                android:text="@string/btn_7"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_8"
                style="?android:attr/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="82dp"
                android:layout_weight="1"
                android:text="@string/btn_8"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_9"
                style="?android:attr/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="82dp"
                android:layout_weight="1"
                android:text="@string/btn_9"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_jian"
                style="?android:attr/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="82dp"
                android:layout_weight="1"
                android:text="@string/btn_jian"
                android:textSize="30sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_4"
                style="?android:attr/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="82dp"
                android:layout_weight="1"
                android:text="@string/btn_4"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_5"
                style="?android:attr/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="82dp"
                android:layout_weight="1"
                android:text="@string/btn_5"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_6"
                style="?android:attr/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="82dp"
                android:layout_weight="1"
                android:text="@string/btn_6"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_chen"
                style="?android:attr/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="82dp"
                android:layout_weight="1"
                android:text="@string/btn_chen"
                android:textSize="30sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_1"
                style="?android:attr/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="82dp"
                android:layout_weight="1"
                android:text="@string/btn_1"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_2"
                style="?android:attr/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="82dp"
                android:layout_weight="1"
                android:text="@string/btn_2"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_3"
                style="?android:attr/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="82dp"
                android:layout_weight="1"
                android:text="@string/btn_3"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_cu"
                style="?android:attr/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="82dp"
                android:layout_weight="1"
                android:text="@string/btn_cu"
                android:textSize="30sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_0"
                style="?android:attr/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="82dp"
                android:layout_weight="1"
                android:text="@string/btn_0"
                android:textSize="30sp"
                android:textStyle="bold" />
            <!--加粗-->
            <Button
                android:id="@+id/btn_dian"
                style="?android:attr/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="82dp"
                android:layout_marginTop="-8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="26dp"
                android:text="@string/btn_dian"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_den"
                style="?android:attr/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="82dp"
                android:layout_weight="3"
                android:text="@string/btn_den"
                android:textSize="30sp"
                android:textStyle="bold" />
        </TableRow>

    </TableLayout>

</LinearLayout>